# slackbot

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.slim  LICENSE  README.md  docker-compose.yml
.docker/database/: 01_create_db.sql
api/: Cargo.toml
api/src/: infrastructure.rs  lib.rs  serializer.rs  serializers.rs  use_cases.rs
api/src/infrastructure/: chat.rs  plusplus.rs  third_slack_chat.rs
api/src/serializer/: request.rs
api/src/serializers/: event.rs  post_body.rs  request.rs
api/src/use_cases/: slackbot.rs
api/src/views/: slackbot.rs
entity/: Cargo.toml
entity/src/: lib.rs  plusplus.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20221215_000001_create_plusplus.rs
src/: main.rs  serializer.rs  slackbot.rs
src/infrastructure/: chat.rs
src/serializer/: event.rs  post_body.rs
src/use_cases/: slackbot.rs
